WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309027
Payment Request: reject with InvalidStateError when document is not fully active
https://bugs.webkit.org/show_bug.cgi?id=309027
Summary
Payment Request: reject with InvalidStateError when document is not fully active
Marcos Caceres
Reported
2026-03-02 17:52:08 PST
Spec change
https://github.com/w3c/payment-request/pull/1056
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-02 22:36:19 PST
<
rdar://problem/171593464
>
Marcos Caceres
Comment 2
2026-03-03 22:01:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59870
EWS
Comment 3
2026-03-12 10:04:36 PDT
Committed
309150@main
(ccf55ec022ef): <
https://commits.webkit.org/309150@main
> Reviewed commits have been landed. Closing PR #59870 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug