Payment Request: reject with InvalidStateError when document is not fully active rdar://171593464 https://bugs.webkit.org/show_bug.cgi?id=309027

Reviewed by Abrar Rahman Protyasha and Anne van Kesteren.

Uses InvalidStateError for when the API is called from a detached document,
and AbortError if script itself destroyed the script execution context/document.

Spec change:
https://github.com/w3c/payment-request/pull/1056

Upstream WPT commit: https://github.com/web-platform-tests/wpt/commit/05fdf811f9ca0a3d95f0eb54cb9a0680c58104ec

Test: imported/w3c/web-platform-tests/payment-request/rejects_if_not_active.https.html

* LayoutTests/TestExpectations:
* LayoutTests/http/tests/paymentrequest/page-cache-created-payment-response.https-expected.txt:
* LayoutTests/http/tests/paymentrequest/page-cache-created-payment-response.https.html:
* LayoutTests/http/tests/paymentrequest/page-cache-retried-payment-response.https-expected.txt:
* LayoutTests/http/tests/paymentrequest/page-cache-retried-payment-response.https.html:
* LayoutTests/http/tests/paymentrequest/payment-response-rejects-if-not-active.https.html:
* LayoutTests/http/tests/paymentrequest/rejects_if_not_active.https-expected.txt:
* LayoutTests/http/tests/paymentrequest/rejects_if_not_active.https.html:
* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/rejects_if_not_active.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-allowed-by-permissions-policy.https.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-allowed-by-permissions-policy.https.sub.html:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-disabled-by-permissions-policy.https.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-disabled-by-permissions-policy.https.sub.html:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-extension-allowed-by-permissions-policy-attribute.https.sub-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-extension-allowed-by-permissions-policy-attribute.https.sub.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-supported-by-permissions-policy.tentative-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/payment-supported-by-permissions-policy.tentative.html:
* LayoutTests/imported/w3c/web-platform-tests/permissions-policy/resources/permissions-policy-payment-extension.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::show):
(WebCore::PaymentRequest::canMakePayment):
* Source/WebCore/Modules/paymentrequest/PaymentResponse.cpp:
(WebCore::PaymentResponse::complete):
(WebCore::PaymentResponse::retry):
* Source/WebCore/Modules/paymentrequest/PaymentResponse.h:
* Source/WebCore/Modules/paymentrequest/PaymentResponse.idl:

Canonical link: https://commits.webkit.org/309150@main